--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-temperature-converter></app-temperature-converter>
+<!-- <app-temperature-converter></app-temperature-converter> -->
+
+<app-temperature-converter-reactive></app-temperature-converter-reactive>
